# stellawish-bot

./: .gitignore  README.md  bot.py  pyproject.toml
source/data/: all_charts.json
source/plugins/: AddAlias.py  Alias.py  B50.py  Bind.py  Chartel.py  DelAlias.py  Hangman.py  Info.py  Perm.py  Update.py  startup.py
