[project]
name = "Stellawish"
version = "0.1.0"
description = "Stellawish"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.4.4",
    "nonebot2[httpx]>=2.4.4",
    "nonebot2[websockets]>=2.4.4",
    "nonebot-adapter-qq>=1.6.6",
    "nonebot-plugin-status>=0.9.0",
    "nonebot-plugin-docs>=2.4.4",
    "nonebot_plugin_session>=0.3.2",
    "nonebot-plugin-waiter>=0.8.1",
]

[tool.nonebot]
plugin_dirs = ["source/plugins"]
builtin_plugins = ["echo"]

[tool.nonebot.adapters]
nonebot-adapter-qq = [
    { name = "QQ", module_name = "nonebot.adapters.qq" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-status = ["nonebot_plugin_status"]
nonebot_plugin_session = ["nonebot_plugin_session"]
nonebot-plugin-waiter = ["nonebot_plugin_waiter"]
